--- a/src/app/admin/pages/facturas-medicas/ver-facturas/ver-facturas.component.html
+++ b/src/app/admin/pages/facturas-medicas/ver-facturas/ver-facturas.component.html
@@ -81,21 +81,21 @@
         <a class="cursor"
         data-toggle="tooltip" 
         data-original-title="Borrar"
-        (click)="borrarFactura( factura.idFactura )"> 
+        (click)="borrarFactura( factura.id_factura )"> 
         <i class="fa fa-close text-danger"></i> 
       </a>
       </div>
-      <!-- Icono de Impresión -->
+     
 <div class="icon-container icon-print">
     <a class="cursor" data-toggle="tooltip" data-original-title="Imprimir" 
-       [routerLink]="['/imprimir-factura', factura.idFactura]">
+       [routerLink]="['/imprimir-factura', factura.id_factura]">
         <i class="fa fa-print"></i> 
     </a>
 </div>
   </div>
 </td>
 
-<!-- ... resto de tu código HTML ... -->
+
 
               
               
