--- a/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
+++ b/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
@@ -66,6 +66,7 @@
                                     <option value="terminado">Terminado</option>
                                     <option value="no_asistio">No Asistió</option>
                                     <option value="pagado">Pagado</option>
+                                    <option value="no_pagado">no Pagado</option>
                                     <!-- Añade aquí más estados si los hay -->
                                 </select>
                                 
