--- a/src/app/admin/pages/inicio/inicio.component.html
+++ b/src/app/admin/pages/inicio/inicio.component.html
@@ -1,15 +1,15 @@
 <!-- Suponiendo que este es tu componente: instrucciones.component.html -->
 <div class="container">
-    <h1 class="title">Bienvenido al Sistema de Gestión de Citas Médicas</h1>
+    <h1 class="title">Bienvenid@ al Sistema de Gestión de Citas Médicas</h1>
     <p class="introduction">
         A continuación, encontrará instrucciones detalladas para facilitar la gestión de su clínica. Por favor, siga estos pasos en el orden presentado para una experiencia eficiente.
     </p>
     <ol class="instruction-list">
-        <li><strong>Registro de Pacientes:</strong> Registre a los pacientes en la sección "Gestionar Pacientes". Utilice el botón "Crear Usuarios" para completar el formulario.</li>
-        <li><strong>Registro de Médicos:</strong> Registre a los médicos en "Gestionar Médicos". Haga clic en "Crear Médicos" y complete el formulario correspondiente.</li>
+        <li><strong>Registro de Pacientes:</strong> Registre a los pacientes en la sección "Gestionar Pacientes". Utilice el botón "Crear Usuarios" para completar el formulario, tenga en cuenta que los pacientes se pueden registrar en la aplicacio en el formulario de registro de paciente en la patalla de registro o registrarlos por su cuenta.</li>
         <li><strong>Creación de Tipos de Citas Médicas:</strong> Defina tipos de citas médicas (ej: cardiología, psicología), asignando duración y precio en la sección correspondiente.</li>
-        <li><strong>Creación de Horarios para Médicos:</strong> Establezca horarios para los médicos en "Gestionar Horarios Médicos", seleccionando "Crear Horario Médico".</li>    
-        <li><strong>Programación de Citas Médicas:</strong> Programe citas médicas para los pacientes. Pueden ser adquiridas por los usuarios de la aplicación o registradas por usted, asegurese de que una vez terminada una cita con un paciente cambiar su estado a termino o si no no podra agendar otras citas con ese paciente.</li>
+        <li><strong>Registro de Médicos:</strong> Un vez tenga tipos citas y especialidades medicas registradas, Registre a los médicos en "Gestionar Médicos". Haga clic en "Crear Médicos" y complete el formulario correspondiente, asignandole una especialidad medica a su medico.</li>   
+        <li><strong>Creación de Horarios para Médicos:</strong> Una vez asignadas las especialidades medicas creadas a sus medicos ya creados, puede crear horarios para estos medicos  en "Gestionar Horarios Médicos", seleccionando "Crear Horario Médico".</li>    
+        <li><strong>Programación de Citas Médicas:</strong> Programe citas médicas para los pacientes. Pueden ser compradas por los usuarios de la aplicación o registradas por usted, ES DE SUMA IMPORTANCIA marcar los estados del paciente que asiste o no asiste a la cita media, en caso de que el paciente asista debe cambiar el estado del paciente en la tabla de gestionar citas como terminado, de lo contrario el paciente no podra agendar otra cita, por otra parte si el paciente no asiste a su cita es importante intentar contactarse con el/ella por correo o telefono, en el caso de no obtener respuesta debe cambiar el estado del paciente como no asistio.</li>
     </ol>
 </div>
 
