--- a/src/app/auth/pages/password/password.component.html
+++ b/src/app/auth/pages/password/password.component.html
@@ -3,12 +3,12 @@
     <span class="text-lg mb-4">Recuperar contraseña</span>
 
     <mat-form-field>
-      <mat-label>Usuario</mat-label>
+      <mat-label>Ingrese su primer nombre</mat-label>
       <input type="text" matInput formControlName="nombre" placeholder="nombre">
     </mat-form-field>
 
     <mat-form-field>
-      <mat-label>Email</mat-label>
+      <mat-label>Ingrese el Email con el que se registro en la aplicacion</mat-label>
       <input type="email" matInput formControlName="email" placeholder="Email">
     </mat-form-field>
 
