--- a/src/app/medicos/gestionar-historiales/gestionar-historiales.component.html
+++ b/src/app/medicos/gestionar-historiales/gestionar-historiales.component.html
@@ -29,7 +29,7 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Total de historiales: </h4>
-                <h6 class="card-subtitle">Usuarios registrados en mi aplicacion</h6>
+                <h6 class="card-subtitle">Historiales registrados en mi aplicacion</h6>
                 <div class="table-responsive">
                     <table class="table table-bordered">
                       <thead>
@@ -40,7 +40,7 @@
                           <th>Medicamento</th>
                           <th>notas</th>
                           <th>Fecha de consulta</th>
-                          <th>Paciente</th>
+                          <th>Medico</th>
                           <th>Acciones</th>
                         </tr>
                       </thead>
@@ -51,7 +51,7 @@
                           <td>{{historial.medicamento}}</td>
                           <td>{{historial.notas}}</td>
                           <td>{{historial.fecha_consulta}}</td>
-                          <td>{{historial.rut_paciente}}</td>
+                          
 
               <td>
                 <div class="icon-container">
