--- a/src/app/pacientes/pages/historial-paciente/historial-paciente.component.html
+++ b/src/app/pacientes/pages/historial-paciente/historial-paciente.component.html
@@ -1,21 +1,5 @@
 
 
-<div class="row animated fadeIn fast"
->
-    <div class="col-12">
-        <div class="card">
-            <div class="card-body">
-
-                <input type="text"
-                        class="form-control"
-                        placeholder="Buscar Historial..."
-                        #txtTermino
-                        (keyup)="buscar( txtTermino.value )"/>
-
-            </div>
-        </div>
-    </div>
-</div> 
 
 
 
@@ -34,7 +18,9 @@
                           <th>Diagnostico</th>
                           <th>Medicamento</th>
                           <th>notas</th>
+                          <th>Medico</th>
                           <th>Fecha de consulta</th>
+                          
                          <!-- <th>Rut paciente</th> -->
                       
                         </tr>
@@ -45,7 +31,9 @@
                           <td>{{historial.diagnostico}}</td>
                           <td>{{historial.medicamento}}</td>
                           <td>{{historial.notas}}</td>
+                          <td>{{historial.medico.nombre}} {{historial.medico.apellidos}}</td>
                           <td>{{historial.fecha_consulta}}</td>
+                          
                        <!--   <td>{{historial.rut_paciente}}</td> -->
                    
 
@@ -57,7 +45,7 @@
                     </table>
                   </div>
                 <!--ESTA CONDICION SE HACE PARA QUE CUANDO SE TECLEA EN LA BARRA DE BUSQUEDA Y SE CARGAN LOS RESULTADOS DE BUSQUEDA DESAPARESCAN LOS BOTONES SIGUIENTES Y ANTERIOR EN LA PANTALLA-->
-                <div *ngIf="txtTermino.value.length === 0"> <!--SI EL TERMINO ES IGUAL A 0 LOS BOTONES SIGUIENTE Y ANTERIOR SE VAN A MOSTRAR CASO CONTRARIO VAN A DESAPARECER-->
+                <div> <!--SI EL TERMINO ES IGUAL A 0 LOS BOTONES SIGUIENTE Y ANTERIOR SE VAN A MOSTRAR CASO CONTRARIO VAN A DESAPARECER-->
                   <button (click)="cambiarPagina(-5)" class="btn btn-secondary">Anteriores</button>
                   &nbsp; <!--Esto es para que exista una pequeña separacion entre ambos-->
                   <button (click)="cambiarPagina(5)" class="btn btn-secondary">Siguiente</button>
