--- a/src/app/pacientes/pages/payment-success/payment-success.component.html
+++ b/src/app/pacientes/pages/payment-success/payment-success.component.html
@@ -1,4 +1,5 @@
 <!-- payment-success.component.html -->
+<button (click)="volverAInicio()" class="btn btn-secondary mt-3">Volver a Inicio</button>
 <div  *ngIf="detallesCita">
     <h2>Detalles de la Cita</h2>
     <p><strong>Motivo:</strong> {{ detallesCita.motivo }}</p>
