--- a/src/app/pacientes/pages/formulario-cita/formulario-cita.component.html
+++ b/src/app/pacientes/pages/formulario-cita/formulario-cita.component.html
@@ -37,7 +37,8 @@
   </div>
 
 
-<!-- Asumiendo que quieres mostrar esta información en alguna parte de tu plantilla -->
+  <div class="info-especialidades mb-3">Revisa las especialidades médicas en los días de la semana que se encuentran abajo y selecciona en el calendario alguno de esos días. Luego, verifica si hay médicos disponibles en esa fecha selecionada.</div>
+
 <div class="row">
   <!-- Días de lunes a jueves -->
   <div class="col-12">
@@ -53,7 +54,7 @@
     </div>
   </div>
 
-  <!-- Días de sábado y domingo -->
+
   <div class="col-12">
     <div class="row justify-content-center">
       <div class="col-md-3 mb-4" *ngFor="let dia of ordenDias.slice(5)">
