--- a/src/app/admin/pages/gestionarTiposCitas/gestionar-tipos-citas/gestionar-tipos-citas.component.html
+++ b/src/app/admin/pages/gestionarTiposCitas/gestionar-tipos-citas/gestionar-tipos-citas.component.html
@@ -41,6 +41,7 @@
                           <th>Tipo cita</th>
                           <th>Precio</th>
                           <th>Especialidad Medica</th>
+                          <th>Duracion cita</th>
                           <th>acciones</th>
 
 
@@ -52,6 +53,7 @@
                           <td>{{tipocita.tipo_cita}}</td>
                           <td>{{tipocita.precio}}</td>
                           <td>{{tipocita.especialidad_medica}}</td>
+                          <td>{{tipocita.duracion_cita}}</td>
                      
 
               <td>
