--- a/src/app/admin/pages/gestionarHorariosMedicos/gestionar-horarios-medicos/gestionar-horarios-medicos.component.html
+++ b/src/app/admin/pages/gestionarHorariosMedicos/gestionar-horarios-medicos/gestionar-horarios-medicos.component.html
@@ -60,8 +60,8 @@
                           <th>diaSemana</th>
                           <th>horaInicio</th>
                           <th>horaFinalizacion</th>
-
-                          
+                          <th>Inicio colacion</th>
+                          <th>Fin colacion</th>
                           <th>Nombre medico</th>
           
                           <th>Especialidad medica</th>
@@ -76,7 +76,8 @@
                           <td>{{ horario.diaSemana }}</td>
                           <td>{{ horario.horaInicio }}</td>
                           <td>{{ horario.horaFinalizacion }}</td>
- 
+                          <td>{{ horario.inicio_colacion }}</td>
+                          <td>{{ horario.fin_colacion }}</td>
                           <td>{{ horario.medico.nombre + ' ' + horario.medico.apellidos }}</td>
 
                           <td>{{ horario.medico.especialidad_medica }}</td>
