--- a/src/app/admin/pages/gestionar-medicos/gestiona-medicos/gestionar-medicos.component.html
+++ b/src/app/admin/pages/gestionar-medicos/gestiona-medicos/gestionar-medicos.component.html
@@ -27,7 +27,7 @@
 
 <div class="row" 
 >
-    <div class="col-12">
+    <div class="col-lg-12 col-md-6 col-sm-12">
         <div class="card">
             <div class="card-body">      
                 
@@ -55,7 +55,7 @@
                   <table class="table table-bordered">
                     <thead>
                       <tr>
-                      <!-- <th>Foto</th> -->
+                    
                         <th>ID</th>
                         <th>Nombre</th>
                         <th>Apellidos</th>
@@ -63,10 +63,10 @@
                         <th>Email</th>
                         <th>Dirección</th>
                         
-                        <th>Nacionalidad</th>
+                    
                         <th>Especialidad</th>
                         <th>Acciones</th>
-                        <!-- Agrega más columnas según tus necesidades -->
+                    
                       </tr>
                     </thead>
                     <tbody>
@@ -79,7 +79,7 @@
                         <td>{{ medico.email }}</td>
                         <td>{{ medico.direccion }}</td>
                         
-                        <td>{{ medico.nacionalidad }}</td>
+                     
                         <td>{{ medico.especialidad_medica }}</td>
                         <!-- Aquí puedes agregar botones de acciones para cada médico -->
             <!--BOTON PARA BORRAR MEDICO-->
