--- a/src/app/admin/pages/gestionarHorariosMedicos/editar-horario/editar-horario.component.html
+++ b/src/app/admin/pages/gestionarHorariosMedicos/editar-horario/editar-horario.component.html
@@ -39,15 +39,35 @@
             Este campo es obligatorio.
           </div>
         </div>
+
+        <div *ngIf="horarioMedicoForm.errors?.['horarioLaboralInvalido']" class="text-danger">
+          La hora de inicio debe ser anterior a la hora de finalización.
+        </div>
+
+             
+        <div class="form-group mt-3">
+          <label for="inicioColacion">Hora de Inicio de Colación</label>
+          <input type="time" class="form-control" id="inicioColacion" formControlName="inicio_colacion">
+          <div *ngIf="horarioMedicoForm.errors?.['horarioInvalido']" class="text-danger">
+            El horario de colación debe estar dentro del horario laboral.
+          </div>
+          
+        </div>
+        
+        <div class="form-group mt-3">
+          <label for="finColacion">Hora de Fin de Colación</label>
+          <input type="time" class="form-control" id="finColacion" formControlName="fin_colacion">
+          <div *ngIf="horarioMedicoForm.errors?.['horarioInvalido']" class="text-danger">
+            El horario de colación debe estar dentro del horario laboral.
+          </div>
+          <div *ngIf="horarioMedicoForm.errors?.['colacionInvalida']" class="text-danger">
+            La hora de inicio de colación debe ser anterior a la hora de fin de colación.
+          </div>
+          
+        </div>
           
    
-          <div class="form-group">
-            <label for="rutMedico">Médico</label>
-            <select class="form-control" id="rutMedico" formControlName="rut_medico">
-              <option [value]="null">Selecciona un médico</option>
-              <option *ngFor="let medico of medicos" [value]="medico.rut">{{ medico.nombre }} (Especialidad: {{ medico.especialidad_medica }})</option>
-            </select>
-          </div>
+      
 
           
           <button type="submit" class="btn btn-primary btn-block mt-3" [disabled]="!horarioMedicoForm.valid">Registrar Horario Médico</button>
