--- a/src/app/medicos/historial/historial.component.html
+++ b/src/app/medicos/historial/historial.component.html
@@ -5,7 +5,7 @@
     <div class="mb-3">
         <label for="paciente" class="form-label">Paciente:</label>
         <select class="form-control" id="paciente" formControlName="rut_paciente">
-          <option *ngFor="let paciente of pacientes" [value]="paciente.rut">{{ paciente.nombre }}</option>
+          <option *ngFor="let paciente of pacientes" [value]="paciente.rut">{{ paciente.nombre }} {{ paciente.apellidos }} </option>
         </select>
       </div>
       <div class="mb-3">
